--- a/muensterdiscovery/package.json
+++ b/muensterdiscovery/package.json
@@ -1,7 +1,7 @@
 {
   "name": "muensterdiscovery",
   "private": true,
-  "homepage": "https://lraeusch.github.io/muensterdiscovery",
+  "homepage": "https://lraeuschel.github.io/muensterdiscovery",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
