--- a/muensterdiscovery/package.json
+++ b/muensterdiscovery/package.json
@@ -14,12 +14,19 @@
     },
     "dependencies": {
         "@chakra-ui/react": "^3.29.0",
+        "@chakra-ui/system": "^2.6.2",
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.1",
         "framer-motion": "^12.23.24",
+        "i18next": "^25.6.3",
+        "i18next-browser-languagedetector": "^8.2.0",
+        "i18next-http-backend": "^3.0.2",
+        "js-yaml": "^4.1.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-i18next": "^16.3.4",
         "react-icons": "^5.5.0",
+        "react-intl": "^7.1.14",
         "react-router-dom": "^7.9.6"
     },
     "devDependencies": {
