--- a/muensterdiscovery/package.json
+++ b/muensterdiscovery/package.json
@@ -13,6 +13,8 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
+        "@arcgis/map-components": "^4.34.9",
+        "@arcgis/map-components-react": "^4.34.9",
         "@chakra-ui/react": "^3.29.0",
         "@chakra-ui/system": "^2.6.2",
         "@emotion/react": "^11.14.0",
