--- a/muensterdiscovery/package.json
+++ b/muensterdiscovery/package.json
@@ -13,24 +13,27 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
-        "@chakra-ui/button": "^2.1.0",
+        "@arcgis/map-components": "^4.34.9",
+        "@arcgis/map-components-react": "^4.34.9",
         "@chakra-ui/form-control": "^2.2.0",
-        "@chakra-ui/input": "^2.1.2",
         "@chakra-ui/react": "^3.29.0",
         "@chakra-ui/system": "^2.6.2",
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.1",
-        "@supabase/supabase-js": "^2.84.0",
+        "@supabase/supabase-js": "^2.86.0",
+        "@types/leaflet": "^1.9.21",
         "framer-motion": "^12.23.24",
         "i18next": "^25.6.3",
         "i18next-browser-languagedetector": "^8.2.0",
         "i18next-http-backend": "^3.0.2",
         "js-yaml": "^4.1.1",
+        "leaflet": "^1.9.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-i18next": "^16.3.4",
         "react-icons": "^5.5.0",
         "react-intl": "^7.1.14",
+        "react-leaflet": "^4.2.1",
         "react-router-dom": "^7.9.6"
     },
     "devDependencies": {
@@ -42,7 +45,6 @@
         "eslint": "^9.39.1",
         "eslint-plugin-react-hooks": "^7.0.1",
         "eslint-plugin-react-refresh": "^0.4.24",
-        "gh-pages": "^6.3.0",
         "globals": "^16.5.0",
         "typescript": "~5.9.3",
         "typescript-eslint": "^8.46.3",
