--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,17 +24,20 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
+          cache-dependency-path: muensterdiscovery/package-lock.json
       
       - name: Install dependencies
         run: npm ci
+        working-directory: ./muensterdiscovery
       
       - name: Build
         run: npm run build
+        working-directory: ./muensterdiscovery
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist
+          path: ./muensterdiscovery/dist
 
   deploy:
     environment:
