--- a/muensterdiscovery/package.json
+++ b/muensterdiscovery/package.json
@@ -27,12 +27,14 @@
         "i18next-http-backend": "^3.0.2",
         "js-yaml": "^4.1.1",
         "leaflet": "^1.9.4",
+        "leaflet.markercluster": "^1.5.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-i18next": "^16.3.4",
         "react-icons": "^5.5.0",
         "react-intl": "^7.1.14",
         "react-leaflet": "^4.2.1",
+        "react-leaflet-cluster": "^3.1.1",
         "react-router-dom": "^7.9.6"
     },
     "devDependencies": {
