--- a/muensterdiscovery/package.json
+++ b/muensterdiscovery/package.json
@@ -29,13 +29,15 @@
         "leaflet": "^1.9.4",
         "leaflet.markercluster": "^1.5.3",
         "react": "^18.3.1",
+        "react-confetti": "^6.4.0",
         "react-dom": "^18.3.1",
         "react-i18next": "^16.3.4",
         "react-icons": "^5.5.0",
         "react-intl": "^7.1.14",
         "react-leaflet": "^4.2.1",
         "react-leaflet-cluster": "^3.1.1",
-        "react-router-dom": "^7.9.6"
+        "react-router-dom": "^7.9.6",
+        "react-use": "^17.6.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.39.1",
